new name new chain

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Solana Wallet Tracker</title>
-    <meta name="description" content="Check SOL balance of any Solana wallet address on Devnet or Mainnet" />
+    <title>TokenVault - Multi-Chain Portfolio Tracker</title>
+    <meta name="description" content="Professional multi-chain cryptocurrency portfolio tracker. Check balances across Solana, Ethereum, Polygon, Arbitrum, Optimism, and more." />
   </head>
   <body>
     <div id="root"></div>
